url
https://su.cdnskeosp.com:8888/api/v1/client/subscribe?token=wkQXEa2zYwOk6d4y
curl -ksSL https://assets.vtfly.com/others/linux/install.sh | bash

https://dovee.net/knowledgebase.php?action=displayarticle&id=718


In file included from CG/CG_SYSTEM.cpp(7):
/opt/intel/composer_xe_2015.6.233/compiler/include/math.h(1214): error: identifier "_LIB_VERSION_TYPE" is undefined
  _LIBIMF_EXT _LIB_VERSIONIMF_TYPE _LIBIMF_PUBVAR _LIB_VERSIONIMF;


In file included from CG/CG_SYSTEM.cpp:8:
In file included from CG/CG_SYSTEM.h:11:
CG/CG_VECTOR.h:21:51: error: use 'template' keyword to treat 'Array_mask' as a dependent template name
    using Mask_type     = typename SPG_Allocator::Array_mask<T>;
                                                  ^
                                                  template 



../external/SPGrid/Tools/SPGrid_SIMD_Utilities.h:42:70: error: argument to '__builtin_ia32_blendps256' must be a constant integer
    __forceinline static type blend(int imm8, type A, type B){return _mm256_blend_ps(A,B,imm8);}


argument to '__builtin_ia32_blendps256' must be a constant integer
    __forceinline static type blend(constexpr int imm8, type A, type B){return _mm256_blend_ps(A,B,imm8);}
                                                                               ^~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2021.3.0/linux/lib/clang/13.0.0/include/avxintrin.h:1358:11: note: expanded from macro '_mm256_blend_ps'
  (__m256)__builtin_ia32_blendps256((__v8sf)(__m256)(V1), \
